# youtube-summarizer

./: .env.example  .gitignore  AGENT_SETUP.md  API.md  CLAUDE.md  README.md  pyproject.toml
src/youtube_summarizer/: __init__.py  app.py  cli.py  index.html  llm.py  metadata.py  prompts.py  setup_wizard.py  storage.py  transcript.py
